--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vee-validate": "^2.2.8",
         "vue": "^2.6.11",
         "vue-auth-href": "^1.4.1",
+        "vue-friendly-iframe": "^0.20.0",
         "vue-router": "^3.4.3",
         "vue-select": "^3.16.0",
         "vuex": "^3.6.2",
